fix css to show visible and correct ui

--- a/static/css/auth.css
+++ b/static/css/auth.css
@@ -99,26 +99,34 @@ textarea.error {
 /* ===============================
    Password Toggle
 ================================ */
-.form-group .password-group {
+.password-group {
     position: relative;
+    width: 100%;
 }
 
- .password-group input {
-    padding-right: 480px;
+.password-group input {
+    width: 100%;
+    /* padding-right: 45px;  */
+    box-sizing: border-box;
 }
 
 .toggle-password {
     position: absolute;
-    right: 14px;
     top: 50%;
+    bottom: 30px;
+    right: 12px;       
     transform: translateY(-50%);
     cursor: pointer;
     font-size: 18px;
     user-select: none;
     opacity: 0.65;
     transition: opacity 0.2s ease;
-
 }
+
+.toggle-password:hover {
+    opacity: 1;
+}
+
 
 .toggle-password:hover {
     opacity: 1;
