--- a/static/css/post_page.css
+++ b/static/css/post_page.css
@@ -58,7 +58,7 @@
     display: inline-block;
     margin-top: 35px;
     text-decoration: none;
-    background: #111;
+    background: #222;
     color: #fff;
     padding: 12px 22px;
     border-radius: 8px;
