--- a/static/css/style.css
+++ b/static/css/style.css
@@ -29,12 +29,15 @@ body{
 .navbar .brand {
     font-size: 24px;
     font-weight: bold;
+    color: #fff;
+    text-decoration: none;
 }
 
 .nav-links {
     list-style: none;
     display: flex;
     gap: 20px;
+    align-items: center;
 }
 
 .nav-links li a {
@@ -42,6 +45,7 @@ body{
     text-decoration: none;
     padding: 6px 10px;
     transition: 0.3s;
+
 }
 
 .nav-links li a:hover {
@@ -49,16 +53,18 @@ body{
     border-radius: 5px;
 }
 /* Logout button style */
+
 .logout-btn {
     width: 100%;
     background: transparent;
-    border: 1px solid rgb(255, 255, 255);
+    border: 1px solid rgb(255, 0, 0);
     border-radius: 5px;
     padding: 6px 10px;
-    text-align: left;
+    /* text-align: left; */
     color: #ffffff;
     font-weight: 600;
     cursor: pointer;
+    outline: none;
     transition: background 0.25s ease, color 0.25s ease;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
@@ -97,7 +103,7 @@ body{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 30px;
-    background-color: #111;
+    background-color: #222;
 
 }
 
